tests/pass/InheritingException.java
package pass;

public class InheritingException extends Exception {

	public InheritingException(String message) {
		super(message);
	}
	
}
