tests/fail/ThrowsNonException.java
package fail;

public class ThrowsNonException {
	
	public static void main() throws String {
		throw new String();
	}
}
